@@ -1,7 +1,7 @@
 CONFIG += testcase
 TARGET = tst_qglthreads
 requires(contains(QT_CONFIG,opengl))
-QT += opengl widgets testlib
+QT += opengl widgets testlib gui-private core-private
 
 HEADERS += tst_qglthreads.h
 SOURCES += tst_qglthreads.cpp
@@ -10,5 +10,6 @@ x11 {
     LIBS += $$QMAKE_LIBS_X11
 }
 
-CONFIG+=insignificant_test # QTBUG-22560
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
+
+win32:CONFIG+=insignificant_test # QTBUG-28264
